syntax = "proto3";

option csharp_namespace = "ProjectRunners.Protos";

service RunnersControllerGrpc{
  rpc SetState(RunnerStateContractGrpc) returns (NoResponseGrpc);
}

enum RunnerStateGrpc{
    Running = 0;
    Waiting = 1;
    Disconnected = 2;
}

message SetState{}

message RunnerStateContractGrpc{
  int64 runnerId = 1;
  RunnerStateGrpc state = 2;
}

message NoResponseGrpc{}